--- a/index.html
+++ b/index.html
@@ -20,16 +20,20 @@
   button{border:none;cursor:pointer;padding:10px 12px;border-radius:10px;font-weight:650;box-shadow:0 2px 0 rgba(0,0,0,.07)}
   .btn{background:var(--brand);color:#fff} .btn-alt{background:#fff;border:1px solid var(--border)}
   .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #fde68a;color:#92400e;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
-  .footnote{margin-top:8px;font-size:12px;color:#9aa3b2}
-  .hidden{display:none}
+  .muted{color:var(--muted)} .footnote{margin-top:8px;font-size:12px;color:#9aa3b2}
+  .ok{color:#047857}
 </style>
 </head>
 <body>
 <div class="wrap">
   <div class="card">
     <h1>🎅 Sinterlootjes</h1>
-    <p class="lead">Log in of maak je code aan. Daarna kun je naar de lootjes & verlanglijstjes (budget €15).</p>
+    <p class="lead">Log in of maak je account aan met je 5-cijfercode. Daarna ga je door naar de app (lootje & verlanglijstjes).</p>
     <span class="pill" id="loginStatus">Niet ingelogd</span>
+  </div>
+
+  <div class="card">
+    <p class="muted">📍 Begint om <strong>15:00</strong> op <strong>huisnummer 47</strong>. <span class="ok">Hapjes en lekkers worden verzorgd!</span></p>
   </div>
 
   <div class="card">
@@ -40,8 +44,8 @@
         <select id="nameSelect"></select>
       </div>
       <div>
-        <label id="codeLabel">5-cijferige code</label>
-        <input id="code" type="tel" inputmode="numeric" pattern="\\d{5}" maxlength="5" placeholder="• • • • •">
+        <label>5-cijfercode</label>
+        <input id="pin" type="tel" inputmode="numeric" pattern="[0-9]*" maxlength="5" placeholder="Bijv. 53827">
       </div>
     </div>
     <div class="row">
@@ -53,29 +57,28 @@
         </select>
       </div>
       <div class="controls" style="align-items:end">
-        <button class="btn" id="go">Doorgaan</button>
-        <a class="btn-alt hidden" id="toApp" href="app.html">Ga naar app</a>
+        <button class="btn" id="go">Inloggen / Aanmaken</button>
+        <a class="btn-alt" href="app.html" id="toApp" style="text-decoration:none">Ga naar app</a>
       </div>
     </div>
-    <div class="footnote" id="hint"></div>
+    <div class="footnote">Tip: Je kunt de loginpagina bookmarken met <code>?name=JouwNaam</code> in de URL, dan staat je naam al gekozen.</div>
   </div>
 </div>
 
-<!-- Dropdown vuller (zonder Firebase) -->
+<!-- Dropdown vuller + query preselect -->
 <script>
-  (() => {
-    const sel = document.getElementById('nameSelect');
-    const urlParams = new URLSearchParams(location.search);
-    const pre = urlParams.get('name');
-    const names = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
+  (function(){
+    var sel = document.getElementById('nameSelect');
+    var names = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
     sel.innerHTML = '';
-    const ph = document.createElement('option');
-    ph.value = ''; ph.textContent = '— Kies je naam —'; ph.disabled = true; ph.selected = true;
-    sel.appendChild(ph);
-    names.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'})).forEach(n=>{
-      const o=document.createElement('option'); o.value=n; o.textContent=n; sel.appendChild(o);
-    });
-    if (pre && names.includes(pre)) sel.value = pre;
+    var ph = document.createElement('option');
+    ph.value=''; ph.textContent='— Kies je naam —'; ph.disabled=true; ph.selected=true; sel.appendChild(ph);
+    names.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'})).forEach(n=>{ var o=document.createElement('option'); o.value=n; o.textContent=n; sel.appendChild(o); });
+
+    // bookmarkable name: ?name=Zoë
+    var qs=new URLSearchParams(location.search);
+    var qn=qs.get('name');
+    if(qn){ for (var i=0;i<sel.options.length;i++){ if(sel.options[i].value.toLowerCase()===qn.toLowerCase()){ sel.selectedIndex=i; break; } } }
   })();
 </script>
 
@@ -83,13 +86,13 @@
 <script type="module">
   /* Vaste instellingen */
   const EVENT_ID = 'sinty-2025';
+  const TREKCODE = 'hausverlorenenbewilderd';
   const PARTICIPANTS = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
-  const BAD_CODES = new Set(['00000','11111','22222','33333','44444','55555','66666','77777','88888','99999','12345','54321','01234','23456','34567','45678','56789']);
 
   /* Firebase */
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
   import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
-  import { getFirestore, doc, getDoc, setDoc, serverTimestamp, updateDoc, arrayUnion } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
+  import { getFirestore, doc, setDoc, getDoc, serverTimestamp, updateDoc, arrayUnion } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-firestore.js";
 
   const firebaseConfig = {
     apiKey: "AIzaSyDM4bGzvdMlNyr7GCTbHLEo96UJFTCYN4Y",
@@ -105,24 +108,28 @@
   const auth = getAuth(app);
   const db   = getFirestore(app);
 
-  /* UI refs */
-  const nameSelect = document.getElementById('nameSelect');
-  const codeEl     = document.getElementById('code');
-  const modeEl     = document.getElementById('mode');
-  const goBtn      = document.getElementById('go');
-  const toAppBtn   = document.getElementById('toApp');
-  const loginStatus= document.getElementById('loginStatus');
-  const hintEl     = document.getElementById('hint');
-  const codeLabel  = document.getElementById('codeLabel');
-
-  const toast = (m)=>alert(m);
+  /* Helpers */
   const $enc = new TextEncoder();
-  async function hashCode(pw, salt){
+  async function hashPass(pw, salt){
     const key  = await crypto.subtle.importKey('raw', $enc.encode(pw), {name:'PBKDF2'}, false, ['deriveBits']);
     const bits = await crypto.subtle.deriveBits({name:'PBKDF2', hash:'SHA-256', salt:$enc.encode(salt), iterations:120000}, key, 256);
     return [...new Uint8Array(bits)].map(b=>b.toString(16).padStart(2,'0')).join('');
   }
   const randSalt = () => Math.random().toString(36).slice(2)+Math.random().toString(36).slice(2);
+  const toast = m => alert(m);
+
+  function validPin(pin){
+    if(!/^\d{5}$/.test(pin)) return false;
+    const bad = ['00000','11111','22222','33333','44444','55555','66666','77777','88888','99999','12345','54321'];
+    return !bad.includes(pin);
+  }
+
+  /* UI refs */
+  const nameSelect = document.getElementById('nameSelect');
+  const pinEl      = document.getElementById('pin');
+  const modeEl     = document.getElementById('mode');
+  const goBtn      = document.getElementById('go');
+  const loginStatus= document.getElementById('loginStatus');
 
   onAuthStateChanged(auth, (u)=> {
     loginStatus.textContent = u ? `Sessie actief — uid ${u.uid.slice(0,6)}…` : 'Niet ingelogd';
@@ -134,88 +141,47 @@
     return cred.user;
   }
 
-  async function checkAccountExists(name){
-    const pRef = doc(db,'events',EVENT_ID,'participants',name);
-    const snap = await getDoc(pRef);
-    return snap.exists();
-  }
-
-  nameSelect.addEventListener('change', async ()=>{
-    const n = nameSelect.value;
-    if(!n) return;
-    if(!PARTICIPANTS.includes(n)) { hintEl.textContent='Onbekende naam.'; return; }
-    hintEl.textContent = 'Even checken…';
-    try{
-      await ensureAnon();
-      const exists = await checkAccountExists(n);
-      if(exists){
-        modeEl.value = 'login';
-        codeLabel.textContent = 'Voer je 5-cijferige code in';
-        hintEl.textContent = 'Account gevonden — vul je code in.';
-      }else{
-        modeEl.value = 'register';
-        codeLabel.textContent = 'Kies een 5-cijferige code';
-        hintEl.textContent = 'Nog geen account — kies nu een code (geen 12345/00000 enz.).';
-      }
-    }catch(e){
-      hintEl.textContent = 'Kon niet controleren. Probeer opnieuw.';
-    }
-  });
-
-  function validateCode(c){
-    return /^\d{5}$/.test(c) && !BAD_CODES.has(c);
-  }
-
   async function registerOrLogin(){
-    const name = nameSelect.value;
-    const code = codeEl.value.trim();
-    if(!name) return toast('Kies je naam.');
-    if(!/^\d{5}$/.test(code)) return toast('Code moet 5 cijfers zijn.');
-    if(modeEl.value==='register' && !validateCode(code)) return toast('Kies een minder voorspelbare code.');
+    try{
+      const name = nameSelect.value;
+      const pin  = pinEl.value.trim();
+      if(!name) return toast('Kies je naam.');
+      if(!pin)  return toast('Voer je 5-cijfercode in.');
+      if(!validPin(pin)) return toast('Gebruik een 5-cijfercode die niet voorspelbaar is (geen 00000, 12345, etc.).');
+      if(!PARTICIPANTS.includes(name)) return toast('Onbekende naam.');
 
-    await ensureAnon();
-    const pRef = doc(db,'events',EVENT_ID,'participants',name);
-    const snap = await getDoc(pRef);
+      await ensureAnon();
+      const pRef = doc(db,'events',EVENT_ID,'participants',name);
+      const snap = await getDoc(pRef);
 
-    if(modeEl.value === 'register'){
-      if(snap.exists()) return toast('Naam bestaat al. Kies Inloggen.');
-      const salt=randSalt(); const hash=await hashCode(code, salt);
-      await setDoc(pRef, {
-        name, pass_salt:salt, pass_hash:hash,
-        owner_uid: auth.currentUser.uid,
-        allowed_uids: [auth.currentUser.uid],
-        createdAt: serverTimestamp(),
-        hasLoggedIn: true, lastLoginAt: serverTimestamp()
-      });
-      hintEl.textContent = 'Geregistreerd. Je kunt naar de app.';
-    }else{
-      if(!snap.exists()) return toast('Naam nog niet geregistreerd. Kies Nieuw aanmaken.');
-      const data=snap.data(); const hash=await hashCode(code, data.pass_salt);
-      if(hash !== data.pass_hash) return toast('Onjuiste code.');
-      await setDoc(pRef, { hasLoggedIn:true, lastLoginAt: serverTimestamp() }, { merge:true });
-      // voeg dit apparaat toe aan allowed_uids
-      await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
-      hintEl.textContent = 'Ingelogd. Je kunt naar de app.';
+      if(modeEl.value === 'register'){
+        if(snap.exists()) return toast('Naam bestaat al. Kies Inloggen.');
+        const salt=randSalt(); const hash=await hashPass(pin, salt);
+        await setDoc(pRef, {
+          name, pass_salt:salt, pass_hash:hash,
+          owner_uid: auth.currentUser.uid,
+          allowed_uids: [auth.currentUser.uid],
+          createdAt: serverTimestamp(),
+          hasLoggedIn: true, lastLoginAt: serverTimestamp()
+        });
+      }else{
+        if(!snap.exists()) return toast('Naam nog niet geregistreerd. Kies Nieuw aanmaken.');
+        const data=snap.data(); const hash=await hashPass(pin, data.pass_salt);
+        if(hash !== data.pass_hash) return toast('Onjuiste code.');
+        await setDoc(pRef, { hasLoggedIn:true, lastLoginAt: serverTimestamp() }, { merge:true });
+        await updateDoc(pRef, { allowed_uids: arrayUnion(auth.currentUser.uid) });
+      }
+
+      // Bewaar gekozen naam lokaal voor app.html
+      localStorage.setItem('sinty_currentName', name);
+      toast('Ingelogd! Klik nu op “Ga naar app”.');
+    }catch(e){
+      console.error(e);
+      toast('Login mislukt: ' + (e.message || e));
     }
-
-    // Sla naam op (voor app) en toon knop i.p.v. auto-doorgaan
-    localStorage.setItem('sinty_currentName', name);
-    toAppBtn.classList.remove('hidden');
   }
 
-  function bindLogin() {
-  const btn = document.getElementById('go');
-  if (!btn) { console.error('⚠️ Go-knop niet gevonden'); return; }
-  btn.addEventListener('click', (e) => {
-    e.preventDefault();
-    e.stopPropagation();
-    registerOrLogin().catch(err => {
-      console.error(err);
-      alert('Kon niet inloggen/registreren: ' + (err?.message || err));
-    });
-  });
-}
-window.addEventListener('DOMContentLoaded', bindLogin);
+  goBtn.addEventListener('click', registerOrLogin);
 </script>
 </body>
 </html>
