--- a/app.html
+++ b/app.html
@@ -112,7 +112,7 @@
   /* Helpers */
   const toast = m => alert(m);
   function xmur3(str){ let h=1779033703 ^ str.length; for(let i=0;i<str.length;i++){ h=Math.imul(h ^ str.charCodeAt(i),3432918353); h=(h<<13)|(h>>>19);} return function(){ h=Math.imul(h ^ (h>>>16),2246822507); h=Math.imul(h ^ (h>>>13),3266489909); return (h^=h>>>16)>>>0;};}
-  function sfc32(a,b,c,d){ return function(){ a>>>==0;b>>>==0;c>>>==0;d>>>==0; let t=(a+b)|0; a=b^(b>>>9); b=(c+(c<<3))|0; c=(c<<21)|(c>>>11); c=(c+t)|0; d=(d+1)|0; t=(t+d)|0; return (t>>>0)/4294967296;};}
+  function sfc32(a,b,c,d){ return function(){ a>>>=0;b>>>=0;c>>>=0;d>>>=0; let t=(a+b)|0; a=b^(b>>>9); b=(c+(c<<3))|0; c=(c<<21)|(c>>>11); c=(c+t)|0; d=(d+1)|0; t=(t+d)|0; return (t>>>0)/4294967296;};}
   function rng(seed){ const g=xmur3(seed); return sfc32(g(),g(),g(),g()); }
   function shuffle(a, r){ const x=a.slice(); for(let i=x.length-1;i>0;i--){ const j=Math.floor(r()*(i+1)); [x[i],x[j]]=[x[j],x[i]];} return x; }
   function assignDeterministic(names, seed){
