--- a/app.html
+++ b/app.html
@@ -6,9 +6,9 @@
 <title>Sinterlootjes — App</title>
 <meta name="color-scheme" content="light">
 <style>
-  * { box-sizing: border-box; margin:0; padding:0; }
   :root{--bg:#fff7ee;--card:#fff;--text:#1f2937;--muted:#64748b;--brand:#ef4444;--border:#e5e7eb}
-  body{margin:0;font-family:ui-rounded,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Emoji",sans-serif;background:var(--bg);color:var(--text)}
+  *{box-sizing:border-box;margin:0;padding:0}
+  body{font-family:ui-rounded,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Emoji",sans-serif;background:var(--bg);color:var(--text)}
   .wrap{max-width:1000px;margin:24px auto;padding:16px}
   .card{background:var(--card);border:1px solid var(--border);border-radius:16px;padding:16px;box-shadow:0 6px 18px rgba(15,23,42,.06);margin-bottom:14px}
   h1{margin:0 0 8px;font-size:24px} .lead{color:var(--muted);margin:0 0 8px}
@@ -21,35 +21,30 @@
   .btn{background:var(--brand);color:#fff} .btn-alt{background:#fff;border:1px solid var(--border)}
   .muted{color:var(--muted)} .hidden{display:none}
   .pill{display:inline-flex;align-items:center;gap:6px;border:1px solid #fde68a;color:#92400e;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
-  .badge{display:inline-flex;align-items:center;gap:6px;border:1px solid #ffe4e6;color:#9f1239;border-radius:999px;padding:6px 10px;font-size:12.5px;background:#fff}
   .inline-result{display:inline-block;margin-top:10px;border:1px dashed #e5e7eb;border-radius:10px;padding:10px;background:linear-gradient(135deg,#fff,#fff9f1)}
   .item{display:flex;gap:10px;align-items:center;justify-content:space-between;border:1px dashed #e5e7eb;border-radius:10px;padding:10px;margin:6px 0;background:linear-gradient(135deg,#fff,#fff9f1)}
   .col{display:flex;flex-direction:column;gap:6px}
-  a.inline{color:#0b3b84;text-decoration:none}
-  .footnote{margin-top:8px;font-size:12px;color:#9aa3b2}
-  .progress{font-size:12.5px;color:#92400e;border:1px solid #fde68a;background:#fff;border-radius:999px;padding:6px 10px;display:inline-block}
 </style>
 </head>
 <body>
 <div class="wrap">
   <div class="card">
     <h1>🎅 Sinterlootjes</h1>
-    <p class="lead">Je bent ingelogd. Bekijk je lootje (na 1× inloggen door iedereen) en vul verlanglijstjes in. Let op: wijzigingen kunnen een paar seconden duren voordat ze zichtbaar zijn.</p>
+    <p class="lead">Lootje tonen (na 1× inloggen door iedereen) en verlanglijstjes invullen/afstrepen.</p>
     <div class="controls">
       <span class="pill" id="loginStatus">Controleren…</span>
       <button class="btn-alt" id="logout">Uitloggen</button>
     </div>
-    <div class="footnote">📍 15:00 · huisnummer 47 · hapjes en lekkers worden verzorgd</div>
   </div>
 
   <div class="card">
     <h2>Mijn lootje</h2>
-    <p class="muted">Pas zichtbaar als <strong>iedereen</strong> minstens 1× inlogde.</p>
+    <p class="muted">Zichtbaar zodra <strong>iedereen</strong> minstens 1× heeft ingelogd.</p>
     <div class="controls">
       <button class="btn-alt" id="reveal" disabled>Toon mijn lootje</button>
       <span id="myMatch" class="inline-result hidden"></span>
     </div>
-    <div id="allStatus" class="progress hidden"></div>
+    <div id="allStatus" class="muted" style="margin-top:8px;"></div>
   </div>
 
   <div class="card">
@@ -62,32 +57,30 @@
     <textarea id="itemNote" placeholder="Maat, kleur, voorkeur…"></textarea>
     <div class="controls">
       <button class="btn" id="addItem">Toevoegen</button>
-      <span class="muted">⏳ Het kan even duren voordat je item zichtbaar is.</span>
+      <span class="muted">Na toevoegen/verwijderen kan het enkele seconden duren voordat iedereen het ziet.</span>
     </div>
     <div id="myItems" class="col"></div>
   </div>
 
   <div class="card">
-    <h2>Alle verlanglijstjes (familie)</h2>
-    <div class="muted">Iedereen mag toevoegen en afstrepen. Gekochte items worden voor anderen verborgen.</div>
-    <div id="allLists" class="col" style="margin-top:8px;"></div>
+    <h2>Alle verlanglijstjes (volwassenen)</h2>
+    <div id="allLists" class="col"></div>
   </div>
 
   <div class="card">
-    <h2>Verlanglijstjes van de kids</h2>
-    <div class="muted">Otis en Levi doen niet mee aan het lootje, maar je kunt hier wel items toevoegen en afstrepen.</div>
-    <div id="kidsLists" class="col" style="margin-top:8px;"></div>
+    <h2>Verlanglijstjes kids (zonder lootje)</h2>
+    <div id="kidsLists" class="col"></div>
   </div>
 </div>
 
 <script type="module">
-  /* Vaste instellingen */
+  // ==== VASTE INSTELLINGEN ====
   const EVENT_ID = 'sinty-2025';
   const TREKCODE = 'hausverlorenenbewilderd';
   const PARTICIPANTS = ['Dieta','Robert','Saskia S','Saskia H','Mark','Joshua','Jerome','Denise','Zoë'];
   const KIDS = ['Otis','Levi'];
 
-  /* Firebase */
+  // ==== Firebase ====
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-app.js";
   import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.14.1/firebase-auth.js";
   import {
@@ -109,10 +102,12 @@
   const auth = getAuth(app);
   const db   = getFirestore(app);
 
-  /* Helpers */
+  // ==== Helpers ====
   const toast = m => alert(m);
+
+  // Deterministische trekking
   function xmur3(str){ let h=1779033703 ^ str.length; for(let i=0;i<str.length;i++){ h=Math.imul(h ^ str.charCodeAt(i),3432918353); h=(h<<13)|(h>>>19);} return function(){ h=Math.imul(h ^ (h>>>16),2246822507); h=Math.imul(h ^ (h>>>13),3266489909); return (h^=h>>>16)>>>0;};}
-  function sfc32(a,b,c,d){ return function(){ a>>>=0;b>>>=0;c>>>=0;d>>>=0; let t=(a+b)|0; a=b^(b>>>9); b=(c+(c<<3))|0; c=(c<<21)|(c>>>11); c=(c+t)|0; d=(d+1)|0; t=(t+d)|0; return (t>>>0)/4294967296;};}
+  function sfc32(a,b,c,d){ return function(){ a>>>==0;b>>>==0;c>>>==0;d>>>==0; let t=(a+b)|0; a=b^(b>>>9); b=(c+(c<<3))|0; c=(c<<21)|(c>>>11); c=(c+t)|0; d=(d+1)|0; t=(t+d)|0; return (t>>>0)/4294967296;};}
   function rng(seed){ const g=xmur3(seed); return sfc32(g(),g(),g(),g()); }
   function shuffle(a, r){ const x=a.slice(); for(let i=x.length-1;i>0;i--){ const j=Math.floor(r()*(i+1)); [x[i],x[j]]=[x[j],x[i]];} return x; }
   function assignDeterministic(names, seed){
@@ -124,7 +119,7 @@
     return bt(0)?asg:null;
   }
 
-  /* UI refs */
+  // ==== UI refs ====
   const loginStatus = document.getElementById('loginStatus');
   const logoutBtn   = document.getElementById('logout');
   const revealBtn   = document.getElementById('reveal');
@@ -143,12 +138,13 @@
   });
 
   logoutBtn.addEventListener('click', async ()=>{
-    await signOut(auth);
-    localStorage.removeItem('sinty_currentName');
-    window.location.href = 'index.html';
+    try { await signOut(auth); } finally {
+      localStorage.removeItem('sinty_currentName');
+      window.location.href = 'index.html';
+    }
   });
 
-  /* Iedereen 1× ingelogd */
+  // Iedereen 1× ingelogd?
   async function computeAllLoggedOnce(){
     const qs=await getDocs(collection(db,'events',EVENT_ID,'participants'));
     const map=new Map(); PARTICIPANTS.forEach(n=>map.set(n,false));
@@ -158,18 +154,17 @@
   }
   async function updateAllBadge(){
     const {done,total,all}=await computeAllLoggedOnce();
-    if(all){ allStatus.classList.add('hidden'); revealBtn.disabled = !currentName; }
-    else{ allStatus.textContent = `Wachten op familie: ${done}/${total} heeft 1× ingelogd`; allStatus.classList.remove('hidden'); revealBtn.disabled = true; }
+    allStatus.textContent = all ? 'Iedereen heeft 1× ingelogd ✅' : `Wachten op familie: ${done}/${total} heeft 1× ingelogd`;
+    revealBtn.disabled = !(currentName && all);
   }
   onSnapshot(collection(db,'events',EVENT_ID,'participants'), updateAllBadge);
   updateAllBadge();
 
-  /* Lootje tonen */
+  // Toon lootje
   document.getElementById('reveal').addEventListener('click', async ()=>{
-    if(!currentName) return toast('Je naam ontbreekt — ga terug naar de login.');
+    if(!currentName) return toast('Je naam ontbreekt — log opnieuw in a.u.b.');
     const {all}=await computeAllLoggedOnce();
     if(!all) return toast('Nog niet iedereen heeft 1× ingelogd.');
-
     const names = PARTICIPANTS.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}));
     const seed  = JSON.stringify({ TREKCODE, names });
     const asg   = assignDeterministic(names, 'sinterlootjes:'+seed);
@@ -178,8 +173,8 @@
     myMatchEl.classList.remove('hidden');
   });
 
-  /* Verlanglijstjes helpers */
-  function itemRow(owner,id,data,purchased,forKids=false){
+  // Item-render
+  function itemRow(owner,id,data,purchased,canWrite){
     const div=document.createElement('div'); div.className='item';
     const left=document.createElement('div'); left.className='col';
     if(data.url){ const a=document.createElement('a'); a.href=data.url; a.target='_blank'; a.textContent=data.title||'(zonder titel)'; a.className='inline'; left.appendChild(a); }
@@ -187,70 +182,65 @@
     if(data.note){ const s=document.createElement('div'); s.className='muted'; s.textContent=data.note; left.appendChild(s); }
     const right=document.createElement('div'); right.style.display='flex'; right.style.gap='8px';
 
-    // Iedereen mag toevoegen/afstrepen; eigenaar mag zijn eigen item verwijderen.
-    const btnBuy=document.createElement('button'); btnBuy.className='btn';
-    btnBuy.textContent = purchased ? 'Gekocht (ongedaan maken)' : 'Ik koop dit';
-    btnBuy.onclick=async()=>{
-      const pRef=doc(db,'events',EVENT_ID, forKids?'kids':'wishlists',owner,'purchases',id);
-      if(purchased) await deleteDoc(pRef);
-      else await setDoc(pRef,{ at: serverTimestamp() });
-      alert('⏳ Het kan even duren voordat de wijziging zichtbaar is.');
-    };
-    right.appendChild(btnBuy);
-
-    if(!forKids && owner===currentName){
+    // verwijderen (alleen eigenaarlijst en als je mag schrijven)
+    if(canWrite && owner===currentName){
       const del=document.createElement('button'); del.className='btn-alt'; del.textContent='Verwijderen';
-      del.onclick=async()=>{ await deleteDoc(doc(db,'events',EVENT_ID,'wishlists',owner,'items',id)); alert('⏳ Het kan even duren voordat het item verdwijnt.'); };
+      del.onclick=async()=>{ try{ await deleteDoc(doc(db,'events',EVENT_ID,'wishlists',owner,'items',id)); toast('Verwijderd — kan even duren voor iedereen het ziet.'); }catch(e){ toast('Verwijderen mislukt: '+(e.message||e)); } };
       right.appendChild(del);
     }
-    if(forKids){
-      // iedereen mag kids-items verwijderen (optioneel: beperkt houden)
-      const del=document.createElement('button'); del.className='btn-alt'; del.textContent='Verwijderen';
-      del.onclick=async()=>{ await deleteDoc(doc(db,'events',EVENT_ID,'kids',owner,'items',id)); alert('⏳ Even geduld; het verdwijnt zo.'); };
-      right.appendChild(del);
+
+    // koop-knop (iedereen behalve eigenaar ziet hem)
+    if(owner!==currentName){
+      const btn=document.createElement('button'); btn.className='btn'; btn.textContent = purchased ? 'Gekocht (ongedaan)' : 'Ik koop dit';
+      btn.onclick=async()=>{
+        try{
+          const pRef=doc(db,'events',EVENT_ID,'wishlists',owner,'purchases',id);
+          if(purchased) await deleteDoc(pRef);
+          else await setDoc(pRef,{ at: serverTimestamp() });
+          toast('Aangepast — het kan even duren voordat anderen het zien.');
+        }catch(e){ toast('Actie mislukt: '+(e.message||e)); }
+      };
+      right.appendChild(btn);
     }
 
     div.appendChild(left); div.appendChild(right);
     return div;
   }
 
-  /* Mijn lijst */
+  // Mijn lijst toevoegen
   document.getElementById('addItem').addEventListener('click', async ()=>{
     try{
-      if(!currentName) return toast('Je naam ontbreekt — ga terug naar de login.');
+      if(!currentName) return toast('Je naam ontbreekt — log opnieuw in a.u.b.');
       const title=document.getElementById('itemTitle').value.trim();
       const url=document.getElementById('itemUrl').value.trim();
       const note=document.getElementById('itemNote').value.trim();
       if(!title) return toast('Geef een titel.');
-
-      await addDoc(collection(db,'events',EVENT_ID,'wishlists',currentName,'items'), {
-        title, url:url||null, note:note||null, createdAt: serverTimestamp()
-      });
-
-      document.getElementById('itemTitle').value='';
-      document.getElementById('itemUrl').value='';
-      document.getElementById('itemNote').value='';
-      alert('⏳ Item toegevoegd. Het kan een paar seconden duren voordat je het ziet.');
+      await addDoc(collection(db,'events',EVENT_ID,'wishlists',currentName,'items'), { title, url:url||null, note:note||null, createdAt: serverTimestamp() });
+      document.getElementById('itemTitle').value=''; document.getElementById('itemUrl').value=''; document.getElementById('itemNote').value='';
+      toast('Toegevoegd — het kan even duren voordat iedereen het ziet.');
     }catch(e){ console.error(e); toast('Kon item niet toevoegen: '+(e.message||e)); }
   });
 
+  // Mijn lijst live
   function startMyListListener(){
     if(!currentName){ myItemsEl.innerHTML=''; return; }
     const qItems=query(collection(db,'events',EVENT_ID,'wishlists',currentName,'items'), orderBy('createdAt','asc'));
     onSnapshot(qItems,(snap)=>{
-      myItemsEl.innerHTML=''; snap.forEach(d=>{ myItemsEl.appendChild(itemRow(currentName,d.id,d.data(),false)); });
+      myItemsEl.innerHTML='';
+      snap.forEach(d=>{ myItemsEl.appendChild(itemRow(currentName,d.id,d.data(),false,true)); });
       if(!snap.size){ myItemsEl.innerHTML='<div class="muted">Nog geen items.</div>'; }
     });
   }
 
-  async function renderAllLists(){
+  // Alle lijsten (volwassenen) — verberg gekochte items voor anderen
+  async function refreshAllLists(){
     allListsEl.innerHTML='';
     const owners = PARTICIPANTS.slice().sort((a,b)=>a.localeCompare(b,'nl',{sensitivity:'base'}));
     for(const owner of owners){
-      const wrap=document.createElement('div'); wrap.className='card';
-      const h=document.createElement('h3'); h.textContent=owner; wrap.appendChild(h);
-      const list=document.createElement('div'); list.className='col'; wrap.appendChild(list);
-      allListsEl.appendChild(wrap);
+      const box=document.createElement('div'); box.className='card';
+      const h=document.createElement('h3'); h.textContent=owner; box.appendChild(h);
+      const list=document.createElement('div'); list.className='col'; box.appendChild(list);
+      allListsEl.appendChild(box);
 
       const qItems=query(collection(db,'events',EVENT_ID,'wishlists',owner,'items'), orderBy('createdAt','asc'));
       const iSnap=await getDocs(qItems);
@@ -259,73 +249,50 @@
       try{
         const pSnap=await getDocs(collection(db,'events',EVENT_ID,'wishlists',owner,'purchases'));
         pSnap.forEach(d=>purchasedIds.add(d.id));
-      }catch(_){ purchasedIds=new Set(); } // owner kan dit niet lezen
+      }catch(_){ purchasedIds=new Set(); }
 
       iSnap.forEach(d=>{
         const isPurchased=purchasedIds.has(d.id);
-        if(owner !== currentName && isPurchased) return; // verberg gekochte items voor anderen
-        list.appendChild(itemRow(owner,d.id,d.data(),isPurchased));
+        if(owner !== currentName && isPurchased) return;
+        list.appendChild(itemRow(owner,d.id,d.data(),isPurchased,false));
       });
+
       if(!list.childElementCount){ const em=document.createElement('div'); em.className='muted'; em.textContent='Geen zichtbare items.'; list.appendChild(em); }
     }
   }
 
-  async function renderKidsLists(){
+  // Kids lijsten (altijd zichtbaar; kids hebben geen participants-doc nodig)
+  async function refreshKidsLists(){
     kidsListsEl.innerHTML='';
     for(const kid of KIDS){
-      const wrap=document.createElement('div'); wrap.className='card';
-      const h=document.createElement('h3'); h.textContent=kid; wrap.appendChild(h);
+      const box=document.createElement('div'); box.className='card';
+      const h=document.createElement('h3'); h.textContent=kid; box.appendChild(h);
+      const list=document.createElement('div'); list.className='col'; box.appendChild(list);
+      kidsListsEl.appendChild(box);
 
-      // invoer voor iedereen
-      const inputs=document.createElement('div'); inputs.className='controls';
-      const t=document.createElement('input'); t.type='text'; t.placeholder='Item voor '+kid;
-      const u=document.createElement('input'); u.type='text'; u.placeholder='https://... (optioneel)';
-      const n=document.createElement('input'); n.type='text'; n.placeholder='Notitie (optioneel)';
-      const add=document.createElement('button'); add.className='btn'; add.textContent='Toevoegen';
-      inputs.append(t,u,n,add);
-      wrap.appendChild(inputs);
+      const qItems=query(collection(db,'events',EVENT_ID,'wishlists',kid,'items'), orderBy('createdAt','asc'));
+      const iSnap=await getDocs(qItems);
 
-      const list=document.createElement('div'); list.className='col'; wrap.appendChild(list);
-      kidsListsEl.appendChild(wrap);
+      let purchasedIds=new Set();
+      try{
+        const pSnap=await getDocs(collection(db,'events',EVENT_ID,'wishlists',kid,'purchases'));
+        pSnap.forEach(d=>purchasedIds.add(d.id));
+      }catch(_){ purchasedIds=new Set(); }
 
-      add.onclick = async ()=>{
-        const title=t.value.trim(); const url=u.value.trim(); const note=n.value.trim();
-        if(!title) return toast('Geef een titel.');
-        await addDoc(collection(db,'events',EVENT_ID,'kids',kid,'items'), { title, url:url||null, note:note||null, createdAt: serverTimestamp() });
-        t.value=''; u.value=''; n.value='';
-        alert('⏳ Item toegevoegd. Het kan een paar seconden duren.');
-        await loadKid(kid, list);
-      };
+      iSnap.forEach(d=>{
+        const isPurchased=purchasedIds.has(d.id);
+        if(currentName !== kid && isPurchased) return;
+        list.appendChild(itemRow(kid,d.id,d.data(),isPurchased,false));
+      });
 
-      await loadKid(kid, list);
+      if(!list.childElementCount){ const em=document.createElement('div'); em.className='muted'; em.textContent='Nog geen items.'; list.appendChild(em); }
     }
   }
 
-  async function loadKid(kid, list){
-    list.innerHTML='';
-    const qItems=query(collection(db,'events',EVENT_ID,'kids',kid,'items'), orderBy('createdAt','asc'));
-    const iSnap=await getDocs(qItems);
-
-    let purchasedIds=new Set();
-    const pSnap=await getDocs(collection(db,'events',EVENT_ID,'kids',kid,'purchases'));
-    pSnap.forEach(d=>purchasedIds.add(d.id));
-
-    iSnap.forEach(d=>{
-      const isPurchased=purchasedIds.has(d.id);
-      // voor kids verbergen we gekochte items ook voor anderen
-      if(isPurchased) return;
-      list.appendChild(itemRow(kid,d.id,d.data(),isPurchased,true));
-    });
-    if(!list.childElementCount){ list.innerHTML='<div class="muted">Nog geen items.</div>'; }
-  }
-
-  // live updates
-  onSnapshot(collection(db,'events',EVENT_ID,'participants'), ()=>{ updateAllBadge(); startMyListListener(); renderAllLists(); renderKidsLists(); });
-  onSnapshot(collection(db,'events',EVENT_ID,'wishlists'), ()=> renderAllLists());
-  onSnapshot(collection(db,'events',EVENT_ID,'kids'), ()=> renderKidsLists());
-
-  // init
-  startMyListListener(); renderAllLists(); renderKidsLists();
+  // Live listeners & eerste render
+  onSnapshot(collection(db,'events',EVENT_ID,'participants'), ()=>{ updateAllBadge(); startMyListListener(); refreshAllLists(); refreshKidsLists(); });
+  onSnapshot(collection(db,'events',EVENT_ID,'wishlists'), ()=>{ refreshAllLists(); refreshKidsLists(); });
+  startMyListListener(); refreshAllLists(); refreshKidsLists();
 </script>
 </body>
 </html>
